[package]
name = "simx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# 用于处理颜色字符串
color-string = "0.1.6"
# 用于延迟初始化
once_cell = "1.19.0"
# 用于解析和生成 TOML 格式配置文件
toml = "0.8.19"
# 用于序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 用于日志记录
log = "0.4.22"
# 用于创建全局静态变量
lazy_static = "1.5.0"
# 用于处理日期和时间
chrono = "0.4.38"
# 用于发起 HTTP 请求
reqwest = { version = "0.12.5", features = ["json"] }
# 用于处理异步任务
futures = "0.3.30"
# 加载dll
libloader = "0.1.4"
# 加载 so和dylib
libloading = "0.8.5"
# 用于序列化和反序列化数据
bincode = "2.0.0-rc.3"
async-recursion = "1.1.1"

[build-dependencies]
# Windows 下资源打包
winres = "0.1.12"