[package]
name = "engine-common"
version = "0.1.1"
edition = "2021"

[dependencies]
# 用于处理颜色字符串
color-string = "0.1.6"
# 用于序列化和反序列化数据
#bincode = "2.0.0-rc.3"
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 用于解析和生成 TOML 格式配置文件
toml = "0.8.19"
# 用于序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"
# 用于创建全局静态变量
lazy_static = "1.5.0"
# 用于延迟初始化
once_cell = "1.19.0"
# 用于处理日期和时间
chrono = "0.4.38"
# 线程池
threadpool = "1.8.1"
# 用于计算表达式
evalexpr = "11.3.0"
# 用于正则表达式
regex = "1"

bincode = "2.0.0-rc.3"
# uuid
uuid = { version = "1.11.0", features = ["serde", "v4"] }

# 加载dll
libloader = "0.1.4"
# 加载 so和dylib
libloading = "0.8.5"
