[package]
name = "engine-handler"
version = "0.1.1"
edition = "2021"

[dependencies]
# 公共模块
engine-common = { path = "../common" }
# 用于序列化和反序列化数据
serde = { version = "1.0.207", features = ["derive"] }
# serde 的派生宏
serde_derive = "1.0.207"
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# 加载dll
libloader = "0.1.4"
# 加载 so和dylib
libloading = "0.8.5"
