[package]
name = "engine"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
# 公共模块
engine-common = { path = "../common" }
# 核心handle
engine-handler = { path = "../handler" }

# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 用于处理异步任务
futures = "0.3.30"

[build-dependencies]
# Windows 下资源打包
winres = "0.1.12"