[package]
name = "simx-engine"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[dependencies]
# 公共模块
engine-common = { path = "../depend-common" }
# 核心handle
engine-handler = { path = "../depend-handler" }

# 异步运行时库
tokio = { version = "1.39.2", features = ["full"] }
# 用于处理 JSON 数据
serde_json = "1.0.124"
# 用于处理异步任务
futures = "0.3.30"
# 用于序列化和反序列化数据
bincode = "2.0.0-rc.3"
# 用于线程池
threadpool = "1.8.1"
serde = { version = "1.0.209", features = ["derive"] }
log = "0.4.22"

[build-dependencies]
# Windows 下资源打包
winres = "0.1.12"